# LSM

./: .gitignore  README.md
.agent/skills/: calling-rust-from-tauri-frontend
.agents/skills/tauri/: GENERATION.md  SKILL.md
.agents/skills/tauri/references/: best-practices-security-lifecycle.md  best-practices-writing-plugin-permissions.md  concept-ipc-patterns.md  concept-size.md  core-architecture.md  core-ipc.md  core-process-model.md  core-project-structure.md  develop-commands.md  develop-configuration-files.md  develop-debug.md  develop-events-and-channels.md  develop-icons.md  develop-plugins-mobile.md  develop-resources.md  develop-sidecar.md  develop-state-management.md  develop-tests-mocking.md  develop-tests-webdriver.md  develop-tests.md  develop-updating-dependencies.md  develop-windows.md  distribute-packaging.md  distribute-pipelines.md  distribute-signing.md  features-deep-linking.md  (+23 more)
.claude/skills/: packaging-tauri-for-linux
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: app_state.rs  errors.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: metrics.rs  mod.rs  processes.rs
apps/desktop/src-tauri/src/system/: cache.rs  collector.rs  delta.rs  mod.rs  models.rs  perf_tests.rs  processes.rs  procfs.rs  ring_buffer.rs  signal.rs
docs/plans/: 2026-02-14-linux-system-monitor-mvp.md
(+34 files in other folders)
