[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "desktop"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
libc = "0.2"

[dev-dependencies]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
